--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "react-split-pane": "^0.1.92",
+    "scheduler": "^0.23.2",
     "simply-beautiful": "^1.0.1",
     "typescript": "^4.4.2",
     "unescape": "^1.0.1",
